# qgis-plugin-dev-tools

./: .copyright-header.txt  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Containerfile  DEVELOPMENT.md  README.md  pyproject.toml  qgis-plugin-dev-tools.code-workspace  requirements.in  requirements.txt  setup.cfg  setup.py  whitelist.txt
.github/workflows/: code-style.yml  draft-release.yml  pre-commit.yml  publish-image.yml  release.yml  tests.yml
.github/workflows/draft-release/: extract-changes.py  set-version-post0.py  set-version.py
src/hooks/: normalize_xml.py
src/qgis_plugin_dev_tools/: __init__.py  __main__.py
src/qgis_plugin_dev_tools/cli/: __init__.py
src/qgis_plugin_dev_tools/config/: __init__.py  dotenv.py  pyproject.py
src/qgis_plugin_dev_tools/publish/: __init__.py
src/qgis_plugin_dev_tools/start/: __init__.py  config.py  daemon_server.py  launch.py
src/qgis_plugin_dev_tools/start/bootstrap/: __init__.py  template.py
src/qgis_plugin_dev_tools/translations/: __init__.py  update_translations.py
src/qgis_plugin_dev_tools/utils/: __init__.py  distributions.py
test/: test_build.py  test_normalize_xml.py  test_read_distributions.py  test_read_dotenv.py  test_read_pyproject.py  test_rewrite_imports.py  test_translations.py
