[project]
name = "qgis-plugin-dev-tools"
dynamic = ["version", "readme"]
description = "QGIS plugin development and packaging tools, which make managing runtime dependencies easy."
requires-python = ">=3.10"
license = { text = "GNU GPL v3.0" }
authors = [{ name = "National Land Survey of Finland", email = "os@nls.fi" }]
keywords = ["qgis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "packaging>=21.0",
    "tomli>=2.0.0",
    "python-dotenv>=0.19.0",
    "importlib-metadata>=4.9.0",
    "requests>=2.27.0",
]

[project.urls]
Homepage = "https://github.com/nlsfi/qgis-plugin-dev-tools"
Changelog = "https://github.com/nlsfi/qgis-plugin-dev-tools/blob/main/CHANGELOG.md"

[project.scripts]
qpdt = "qgis_plugin_dev_tools.cli:run"
qgis-plugin-dev-tools = "qgis_plugin_dev_tools.cli:run"


[tool.uv]
default-groups = ["dev", "lint"]

[dependency-groups]
dev = [
    "pytest==6.2.5",
    "pytest-cov==4.1.0",
    "coverage[toml]==7.6.1",
    "pytest-mock==3.7.0",
]
lint = [
    "pre-commit==4.5.1",
    "mypy==1.19.1",
    "ruff==0.15.5",
    "virtualenv==20.26.3",
    "PyYAML==6.0.2",
    "typing-extensions==4.12.2",
    # flake8 libraries not included in ruff
    "flake8==7.3.0",
    "flake8-pyproject==1.2.3",
    "flake8-spellcheck==0.28.0",
    "flake8-qgis==1.0.0",
    # requests types
    "types-requests==2.28.11.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "qgis_plugin_dev_tools.__version__" }
readme = { file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qgis_plugin_dev_tools = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 88

lint.ignore = [
    "ANN101", # Missing type annotation for self in method
    "PLC0415", # Import should be at the top-level of a file
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    ]


# List of all rules https://docs.astral.sh/ruff/rules/
lint.select = [
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "C90", # flake8, mccabe
    "E", # flake8, pycodestyle
    "F", # flake8, Pyflakes
    "I", # isort
    "INP", # flake8-no-pep420
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PL", # pylint
    "PT", # flake8-pytest-style
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "T", # flake8-print
    "ICN", # flake8-import-conventions
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "W", # flake8, pycodestyle
    "UP", # pyupgrade
    ]

# Avoiding flagging (and removing) `SC200` from any `# noqa`
# directives, despite Ruff's lack of support for `flake8-spellcheck`.
lint.external = ["SC200"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"test*" = [
    "INP001",
    "ANN201", # Missing return type annotation for public function
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    ]
".github/workflows/*" = [
    "ALL"
]


[tool.flake8]
max-line-length = 88
spellcheck-targets = "names"
dictionaries = "en_US,python,technical"
select = ["SC", "QGS"]
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line length (checked by ruff now, possible mismatches)
]
per-file-ignores = [
    "test/*:INP001,SC200",
]

[tool.mypy]
python_version = "3.10"
follow_imports = "normal"
show_column_numbers = true

[tool.pytest.ini_options]
minversion = "6.0"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
