[metadata]
name = qgis-plugin-dev-tools
version = attr: qgis_plugin_dev_tools.__version__
url = https://github.com/nlsfi/qgis-plugin-dev-tools
project_urls =
    Changelog = https://github.com/nlsfi/qgis-plugin-dev-tools/blob/main/CHANGELOG.md
author = National Land Survey of Finland
author_email = eero.hietanen@maanmittauslaitos.fi
# maintainer =
# maintainer_email =
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Build Tools
    Typing :: Typed
license = GNU GPL v3.0
description = QGIS plugin development and packaging tools, which make managing runtime dependencies easy.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords =
    qgis

[options]
python_requires = >=3.7
packages = find:
package_dir =
    = src
install_requires =
    packaging>=21.0
    tomli>=2.0.0
    python-dotenv>=0.19.0
    importlib-metadata>=4.9.0

[options.packages.find]
where = src

[options.package_data]
qgis_plugin_dev_tools =
    py.typed

[options.entry_points]
console_scripts =
    qpdt = qgis_plugin_dev_tools.cli:run
    qgis-plugin-dev-tools = qgis_plugin_dev_tools.cli:run
